--- a/HistoricalReports/reports/AutomationReport_Wed_Jun_09_10_28_45_BST_2021.html
+++ b/HistoricalReports/reports/AutomationReport_Wed_Jun_09_10_28_45_BST_2021.html
@@ -46,7 +46,7 @@
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<li>
                 <a href='#!'>
-                    <span class='label suite-start-time blue darken-3'>Jun 8, 2021 12:17:28 PM</span>
+                    <span class='label suite-start-time blue darken-3'>Jun 9, 2021 10:28:45 AM</span>
 				</a>
 			</li>
 			<li>
@@ -158,14 +158,14 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
 						<span class='test-name'>com.mydemo.SauceTestUpdated  ::  checkInventoryItemTest_Chrome</span>
-						<span class='test-time'>Jun 8, 2021 12:17:35 PM</span>
+						<span class='test-time'>Jun 9, 2021 10:28:52 AM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Jun 8, 2021 12:17:35 PM</span>
-	<span class='label end-time'>Jun 8, 2021 12:17:38 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 3s+358ms</span>
+	<span class='label start-time'>Jun 9, 2021 10:28:52 AM</span>
+	<span class='label end-time'>Jun 9, 2021 10:28:56 AM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 3s+644ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -179,12 +179,12 @@
 			<tbody>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>12:17:38 PM</td>
-					<td class='step-details'><b><font color>Screenshot of Passed Step</font></b><img data-featherlight='../screenshot/AutomationReport_Tue_Jun_08_12_17_37_BST_2021.png' width='10%' src='../screenshot/AutomationReport_Tue_Jun_08_12_17_37_BST_2021.png' data-src='../screenshot/AutomationReport_Tue_Jun_08_12_17_37_BST_2021.png'></td>
+					<td class='timestamp'>10:28:56 AM</td>
+					<td class='step-details'><b><font color>Screenshot of Passed Step</font></b><img data-featherlight='../screenshot/AutomationReport_Wed_Jun_09_10_28_55_BST_2021.png' width='10%' src='../screenshot/AutomationReport_Wed_Jun_09_10_28_55_BST_2021.png' data-src='../screenshot/AutomationReport_Wed_Jun_09_10_28_55_BST_2021.png'></td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>12:17:38 PM</td>
+					<td class='timestamp'>10:28:56 AM</td>
 					<td class='step-details'><span class='label white-text green'><b>Test Method checkInventoryItemTestSuccessfull</b></span></td>
 				</tr>
 			</tbody>
@@ -197,14 +197,14 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='2'>
 					<div class='test-heading'>
 						<span class='test-name'>com.mydemo.SauceTestUpdated  ::  checkInventoryItemTest_Firefox</span>
-						<span class='test-time'>Jun 8, 2021 12:17:37 PM</span>
+						<span class='test-time'>Jun 9, 2021 10:28:54 AM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Jun 8, 2021 12:17:37 PM</span>
-	<span class='label end-time'>Jun 8, 2021 12:17:40 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 2s+659ms</span>
+	<span class='label start-time'>Jun 9, 2021 10:28:54 AM</span>
+	<span class='label end-time'>Jun 9, 2021 10:28:56 AM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 2s+939ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -218,12 +218,12 @@
 			<tbody>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>12:17:40 PM</td>
-					<td class='step-details'><b><font color>Screenshot of Passed Step</font></b><img data-featherlight='../screenshot/AutomationReport_Tue_Jun_08_12_17_39_BST_2021.png' width='10%' src='../screenshot/AutomationReport_Tue_Jun_08_12_17_39_BST_2021.png' data-src='../screenshot/AutomationReport_Tue_Jun_08_12_17_39_BST_2021.png'></td>
+					<td class='timestamp'>10:28:56 AM</td>
+					<td class='step-details'><b><font color>Screenshot of Passed Step</font></b><img data-featherlight='../screenshot/AutomationReport_Wed_Jun_09_10_28_56_BST_2021.png' width='10%' src='../screenshot/AutomationReport_Wed_Jun_09_10_28_56_BST_2021.png' data-src='../screenshot/AutomationReport_Wed_Jun_09_10_28_56_BST_2021.png'></td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>12:17:40 PM</td>
+					<td class='timestamp'>10:28:56 AM</td>
 					<td class='step-details'><span class='label white-text green'><b>Test Method checkInventoryItemTestSuccessfull</b></span></td>
 				</tr>
 			</tbody>
@@ -236,14 +236,14 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='3'>
 					<div class='test-heading'>
 						<span class='test-name'>com.mydemo.SauceTestUpdated  ::  checkAddToCartButtonTest_Chrome</span>
-						<span class='test-time'>Jun 8, 2021 12:17:45 PM</span>
+						<span class='test-time'>Jun 9, 2021 10:29:06 AM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Jun 8, 2021 12:17:45 PM</span>
-	<span class='label end-time'>Jun 8, 2021 12:17:49 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 3s+255ms</span>
+	<span class='label start-time'>Jun 9, 2021 10:29:06 AM</span>
+	<span class='label end-time'>Jun 9, 2021 10:29:09 AM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 2s+667ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -257,12 +257,12 @@
 			<tbody>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>12:17:49 PM</td>
-					<td class='step-details'><b><font color>Screenshot of Passed Step</font></b><img data-featherlight='../screenshot/AutomationReport_Tue_Jun_08_12_17_48_BST_2021.png' width='10%' src='../screenshot/AutomationReport_Tue_Jun_08_12_17_48_BST_2021.png' data-src='../screenshot/AutomationReport_Tue_Jun_08_12_17_48_BST_2021.png'></td>
+					<td class='timestamp'>10:29:09 AM</td>
+					<td class='step-details'><b><font color>Screenshot of Passed Step</font></b><img data-featherlight='../screenshot/AutomationReport_Wed_Jun_09_10_29_08_BST_2021.png' width='10%' src='../screenshot/AutomationReport_Wed_Jun_09_10_29_08_BST_2021.png' data-src='../screenshot/AutomationReport_Wed_Jun_09_10_29_08_BST_2021.png'></td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>12:17:49 PM</td>
+					<td class='timestamp'>10:29:09 AM</td>
 					<td class='step-details'><span class='label white-text green'><b>Test Method checkAddToCartButtonTestSuccessfull</b></span></td>
 				</tr>
 			</tbody>
@@ -275,14 +275,14 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='4'>
 					<div class='test-heading'>
 						<span class='test-name'>com.mydemo.SauceTestUpdated  ::  checkAddToCartButtonTest_Firefox</span>
-						<span class='test-time'>Jun 8, 2021 12:17:49 PM</span>
+						<span class='test-time'>Jun 9, 2021 10:29:08 AM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Jun 8, 2021 12:17:49 PM</span>
-	<span class='label end-time'>Jun 8, 2021 12:17:52 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 3s+191ms</span>
+	<span class='label start-time'>Jun 9, 2021 10:29:08 AM</span>
+	<span class='label end-time'>Jun 9, 2021 10:29:15 AM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 7s+158ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -296,12 +296,12 @@
 			<tbody>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>12:17:52 PM</td>
-					<td class='step-details'><b><font color>Screenshot of Passed Step</font></b><img data-featherlight='../screenshot/AutomationReport_Tue_Jun_08_12_17_51_BST_2021.png' width='10%' src='../screenshot/AutomationReport_Tue_Jun_08_12_17_51_BST_2021.png' data-src='../screenshot/AutomationReport_Tue_Jun_08_12_17_51_BST_2021.png'></td>
+					<td class='timestamp'>10:29:15 AM</td>
+					<td class='step-details'><b><font color>Screenshot of Passed Step</font></b><img data-featherlight='../screenshot/AutomationReport_Wed_Jun_09_10_29_12_BST_2021.png' width='10%' src='../screenshot/AutomationReport_Wed_Jun_09_10_29_12_BST_2021.png' data-src='../screenshot/AutomationReport_Wed_Jun_09_10_29_12_BST_2021.png'></td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>12:17:52 PM</td>
+					<td class='timestamp'>10:29:15 AM</td>
 					<td class='step-details'><span class='label white-text green'><b>Test Method checkAddToCartButtonTestSuccessfull</b></span></td>
 				</tr>
 			</tbody>
@@ -356,19 +356,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Jun 8, 2021 12:17:28 PM</div>
+					<div class='panel-lead'>Jun 9, 2021 10:28:45 AM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Jun 8, 2021 12:17:54 PM</div>
+			 		<div class='panel-lead'>Jun 9, 2021 10:29:16 AM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>0h 0m 26s+105ms</div>
+					<div class='panel-lead'>0h 0m 31s+545ms</div>
 				</div>
 			</div>
 			<div class='col s4'>
