--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Test_automtion_regression_suite" class="navigator-link ">
-                    <span>C:\Users\nilanjan.islam\eclipse-workspace\Demo\Demo\src\test\resources\testrunners\testng_runnerBrowserStack.xml</span>
+                    <span>C:\Users\nilanjan.islam\eclipse-workspace\Demo\Demo\src\test\resources\testrunners\testng_runnerSauce.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -171,7 +171,7 @@
         </div> <!-- panel Test_automtion_regression_suite -->
         <div panel-name="test-xml-Test_automtion_regression_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\nilanjan.islam\eclipse-workspace\Demo\Demo\src\test\resources\testrunners\testng_runnerBrowserStack.xml</span>
+            <span class="header-content">C:\Users\nilanjan.islam\eclipse-workspace\Demo\Demo\src\test\resources\testrunners\testng_runnerSauce.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -182,21 +182,19 @@
     &lt;listener class-name=&quot;ExtentReportListener.ExtentReportListenerUpdated&quot;/&gt;
   &lt;/listeners&gt;
   &lt;test thread-count=&quot;3&quot; parallel=&quot;tests&quot; name=&quot;Test - FF&quot; verbose=&quot;3&quot;&gt;
-    &lt;parameter name=&quot;Target&quot; value=&quot;browserStack&quot;/&gt;
-    &lt;parameter name=&quot;os&quot; value=&quot;Windows&quot;/&gt;
-    &lt;parameter name=&quot;os_version&quot; value=&quot;10&quot;/&gt;
-    &lt;parameter name=&quot;browserName&quot; value=&quot;Firefox&quot;/&gt;
-    &lt;parameter name=&quot;browser_version&quot; value=&quot;80.0&quot;/&gt;
+    &lt;parameter name=&quot;Target&quot; value=&quot;sauce&quot;/&gt;
+    &lt;parameter name=&quot;browserName&quot; value=&quot;firefox&quot;/&gt;
+    &lt;parameter name=&quot;browser_version&quot; value=&quot;79.0&quot;/&gt;
+    &lt;parameter name=&quot;platform&quot; value=&quot;windows 10&quot;/&gt;
     &lt;classes&gt;
       &lt;class name=&quot;com.mydemo.SauceTestUpdated&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test - FF --&gt;
   &lt;test thread-count=&quot;3&quot; parallel=&quot;tests&quot; name=&quot;Test - Chrome&quot; verbose=&quot;3&quot;&gt;
-    &lt;parameter name=&quot;Target&quot; value=&quot;browserStack&quot;/&gt;
-    &lt;parameter name=&quot;os&quot; value=&quot;OS X&quot;/&gt;
-    &lt;parameter name=&quot;os_version&quot; value=&quot;Catalina&quot;/&gt;
-    &lt;parameter name=&quot;browserName&quot; value=&quot;Chrome&quot;/&gt;
+    &lt;parameter name=&quot;Target&quot; value=&quot;sauce&quot;/&gt;
+    &lt;parameter name=&quot;browserName&quot; value=&quot;chrome&quot;/&gt;
     &lt;parameter name=&quot;browser_version&quot; value=&quot;85.0&quot;/&gt;
+    &lt;parameter name=&quot;platform&quot; value=&quot;macOS 10.15&quot;/&gt;
     &lt;classes&gt;
       &lt;class name=&quot;com.mydemo.SauceTestUpdated&quot;/&gt;
     &lt;/classes&gt;
@@ -245,24 +243,24 @@ data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'checkInventoryItemTest')
 data.setCell(0, 2, 'com.mydemo.SauceTestUpdated')
-data.setCell(0, 3, 2517);
+data.setCell(0, 3, 4212);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'checkAddToCartButtonTest')
 data.setCell(1, 2, 'com.mydemo.SauceTestUpdated')
-data.setCell(1, 3, 2356);
+data.setCell(1, 3, 3770);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'checkAddToCartButtonTest')
 data.setCell(2, 2, 'com.mydemo.SauceTestUpdated')
-data.setCell(2, 3, 2245);
+data.setCell(2, 3, 3673);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'checkInventoryItemTest')
 data.setCell(3, 2, 'com.mydemo.SauceTestUpdated')
-data.setCell(3, 3, 1907);
+data.setCell(3, 3, 2860);
 window.suiteTableData['Test_automtion_regression_suite']= { tableData: data, tableDiv: 'times-div-Test_automtion_regression_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 9 seconds</span>
+              <span class="suite-total-time">Total running time: 14 seconds</span>
               <div id="times-div-Test_automtion_regression_suite">
               </div> <!-- times-div-Test_automtion_regression_suite -->
             </div> <!-- times-div -->
@@ -294,56 +292,56 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="configuration-method before">
-                <span class="method-name">setUp(Firefox, 80.0, Windows, 10, browserStack, optional, public void com.mydemo.SauceTestUpdated.checkInv...)</span>
-                <span class="method-start">1438 ms</span>
+                <span class="method-name">setUp(firefox, 79.0, optional, optional, sauce, windows 10, public void com.mydemo.SauceTestUpdated.checkI...)</span>
+                <span class="method-start">1189 ms</span>
               </div> <!-- configuration-method before -->
               <div class="configuration-method before">
-                <span class="method-name">setUp(Chrome, 85.0, OS X, Catalina, browserStack, optional, public void com.mydemo.SauceTestUpdated.checkI...)</span>
-                <span class="method-start">1438 ms</span>
+                <span class="method-name">setUp(chrome, 85.0, optional, optional, sauce, macOS 10.15, public void com.mydemo.SauceTestUpdated.checkI...)</span>
+                <span class="method-start">1189 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">checkInventoryItemTest</span>
-                <span class="method-start">9157 ms</span>
+                <span class="method-start">7798 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown([TestResult name=checkInventoryItemTest_chrome status=SUCCESS method=SauceTestUpdated.checkInventory...)</span>
+                <span class="method-start">11767 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp(chrome, 85.0, optional, optional, sauce, macOS 10.15, public void com.mydemo.SauceTestUpdated.checkA...)</span>
+                <span class="method-start">12712 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">checkAddToCartButtonTest</span>
+                <span class="method-start">18691 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">checkInventoryItemTest</span>
-                <span class="method-start">11563 ms</span>
+                <span class="method-start">21908 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">tearDown([TestResult name=checkInventoryItemTest_Chrome status=SUCCESS method=SauceTestUpdated.checkInventory...)</span>
-                <span class="method-start">13437 ms</span>
+                <span class="method-name">tearDown([TestResult name=checkAddToCartButtonTest_chrome status=SUCCESS method=SauceTestUpdated.checkAddToCa...)</span>
+                <span class="method-start">23369 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method after">
-                <span class="method-name">tearDown([TestResult name=checkInventoryItemTest_Firefox status=SUCCESS method=SauceTestUpdated.checkInventor...)</span>
-                <span class="method-start">14352 ms</span>
+                <span class="method-name">tearDown([TestResult name=checkInventoryItemTest_firefox status=SUCCESS method=SauceTestUpdated.checkInventor...)</span>
+                <span class="method-start">27071 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
-                <span class="method-name">setUp(Chrome, 85.0, OS X, Catalina, browserStack, optional, public void com.mydemo.SauceTestUpdated.checkA...)</span>
-                <span class="method-start">15510 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp(Firefox, 80.0, Windows, 10, browserStack, optional, public void com.mydemo.SauceTestUpdated.checkAdd...)</span>
-                <span class="method-start">17509 ms</span>
+                <span class="method-name">setUp(firefox, 79.0, optional, optional, sauce, windows 10, public void com.mydemo.SauceTestUpdated.checkA...)</span>
+                <span class="method-start">28373 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">checkAddToCartButtonTest</span>
-                <span class="method-start">21204 ms</span>
+                <span class="method-start">46578 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">tearDown([TestResult name=checkAddToCartButtonTest_Chrome status=SUCCESS method=SauceTestUpdated.checkAddToCa...)</span>
-                <span class="method-start">24292 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="test-method">
-                <span class="method-name">checkAddToCartButtonTest</span>
-                <span class="method-start">26256 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown([TestResult name=checkAddToCartButtonTest_Firefox status=SUCCESS method=SauceTestUpdated.checkAddToC...)</span>
-                <span class="method-start">29424 ms</span>
+                <span class="method-name">tearDown([TestResult name=checkAddToCartButtonTest_firefox status=SUCCESS method=SauceTestUpdated.checkAddToC...)</span>
+                <span class="method-start">51313 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-suite after">
                 <span class="method-name">fileemail</span>
-                <span class="method-start">31378 ms</span>
+                <span class="method-start">52236 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
