--- a/test-output/old/Test automtion regression suite/methods.html
+++ b/test-output/old/Test automtion regression suite/methods.html
@@ -1,32 +1,32 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Test automtion regression suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="75707f">  <td>21/06/08 08:38:50</td>   <td>0</td> <td title="&gt;&gt;BaseTestUpdated.fileclear()[pri:0, instance:com.mydemo.SauceTestUpdated@2462cb01]">&gt;&gt;fileclear</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@736920911</td>   <td></td> </tr>
-<tr bgcolor="75707f">  <td>21/06/08 08:38:52</td>   <td>1435</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestUpdated.setUp(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.reflect.Method, org.testng.ITestContext)[pri:0, instance:com.mydemo.SauceTestUpdated@34129c78]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1867537187</td>   <td></td> </tr>
-<tr bgcolor="75707f">  <td>21/06/08 08:38:52</td>   <td>1435</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestUpdated.setUp(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.reflect.Method, org.testng.ITestContext)[pri:0, instance:com.mydemo.SauceTestUpdated@2462cb01]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@320852551</td>   <td></td> </tr>
-<tr bgcolor="8d60ab">  <td>21/06/08 08:39:00</td>   <td>9151</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SauceTestUpdated.checkInventoryItemTest()[pri:1, instance:com.mydemo.SauceTestUpdated@2462cb01]">checkInventoryItemTest</td> 
-  <td>TestNG-tests-2@320852551</td>   <td></td> </tr>
-<tr bgcolor="8d60ab">  <td>21/06/08 08:39:02</td>   <td>11557</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SauceTestUpdated.checkInventoryItemTest()[pri:1, instance:com.mydemo.SauceTestUpdated@34129c78]">checkInventoryItemTest</td> 
-  <td>TestNG-tests-1@1867537187</td>   <td></td> </tr>
-<tr bgcolor="75707f">  <td>21/06/08 08:39:04</td>   <td>13431</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestUpdated.tearDown(org.testng.ITestResult, org.testng.ITestContext)[pri:0, instance:com.mydemo.SauceTestUpdated@2462cb01]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@320852551</td>   <td></td> </tr>
-<tr bgcolor="75707f">  <td>21/06/08 08:39:05</td>   <td>14346</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestUpdated.tearDown(org.testng.ITestResult, org.testng.ITestContext)[pri:0, instance:com.mydemo.SauceTestUpdated@34129c78]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1867537187</td>   <td></td> </tr>
-<tr bgcolor="75707f">  <td>21/06/08 08:39:06</td>   <td>15505</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestUpdated.setUp(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.reflect.Method, org.testng.ITestContext)[pri:0, instance:com.mydemo.SauceTestUpdated@2462cb01]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@320852551</td>   <td></td> </tr>
-<tr bgcolor="75707f">  <td>21/06/08 08:39:08</td>   <td>17504</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestUpdated.setUp(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.reflect.Method, org.testng.ITestContext)[pri:0, instance:com.mydemo.SauceTestUpdated@34129c78]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1867537187</td>   <td></td> </tr>
-<tr bgcolor="8d60ab">  <td>21/06/08 08:39:12</td>   <td>21198</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SauceTestUpdated.checkAddToCartButtonTest()[pri:2, instance:com.mydemo.SauceTestUpdated@2462cb01]">checkAddToCartButtonTest</td> 
-  <td>TestNG-tests-2@320852551</td>   <td></td> </tr>
-<tr bgcolor="75707f">  <td>21/06/08 08:39:15</td>   <td>24287</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestUpdated.tearDown(org.testng.ITestResult, org.testng.ITestContext)[pri:0, instance:com.mydemo.SauceTestUpdated@2462cb01]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@320852551</td>   <td></td> </tr>
-<tr bgcolor="8d60ab">  <td>21/06/08 08:39:17</td>   <td>26250</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SauceTestUpdated.checkAddToCartButtonTest()[pri:2, instance:com.mydemo.SauceTestUpdated@34129c78]">checkAddToCartButtonTest</td> 
-  <td>TestNG-tests-1@1867537187</td>   <td></td> </tr>
-<tr bgcolor="75707f">  <td>21/06/08 08:39:20</td>   <td>29419</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestUpdated.tearDown(org.testng.ITestResult, org.testng.ITestContext)[pri:0, instance:com.mydemo.SauceTestUpdated@34129c78]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1867537187</td>   <td></td> </tr>
-<tr bgcolor="75707f">  <td>21/06/08 08:39:22</td>   <td>31372</td> <td title="&lt;&lt;BaseTestUpdated.fileemail()[pri:0, instance:com.mydemo.SauceTestUpdated@2462cb01]">&lt;&lt;fileemail</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@736920911</td>   <td></td> </tr>
+<tr bgcolor="996ed7">  <td>21/06/09 15:32:16</td>   <td>0</td> <td title="&gt;&gt;BaseTestUpdated.fileclear()[pri:0, instance:com.mydemo.SauceTestUpdated@1169afe1]">&gt;&gt;fileclear</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1578587450</td>   <td></td> </tr>
+<tr bgcolor="996ed7">  <td>21/06/09 15:32:17</td>   <td>1191</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestUpdated.setUp(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.reflect.Method, org.testng.ITestContext)[pri:0, instance:com.mydemo.SauceTestUpdated@2eea88a1]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@299524541</td>   <td></td> </tr>
+<tr bgcolor="996ed7">  <td>21/06/09 15:32:17</td>   <td>1191</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestUpdated.setUp(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.reflect.Method, org.testng.ITestContext)[pri:0, instance:com.mydemo.SauceTestUpdated@1169afe1]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@1475166221</td>   <td></td> </tr>
+<tr bgcolor="7993ad">  <td>21/06/09 15:32:23</td>   <td>7794</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SauceTestUpdated.checkInventoryItemTest()[pri:1, instance:com.mydemo.SauceTestUpdated@1169afe1]">checkInventoryItemTest</td> 
+  <td>TestNG-tests-2@1475166221</td>   <td></td> </tr>
+<tr bgcolor="996ed7">  <td>21/06/09 15:32:27</td>   <td>11763</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestUpdated.tearDown(org.testng.ITestResult, org.testng.ITestContext)[pri:0, instance:com.mydemo.SauceTestUpdated@1169afe1]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@1475166221</td>   <td></td> </tr>
+<tr bgcolor="996ed7">  <td>21/06/09 15:32:28</td>   <td>12708</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestUpdated.setUp(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.reflect.Method, org.testng.ITestContext)[pri:0, instance:com.mydemo.SauceTestUpdated@1169afe1]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@1475166221</td>   <td></td> </tr>
+<tr bgcolor="7993ad">  <td>21/06/09 15:32:34</td>   <td>18687</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SauceTestUpdated.checkAddToCartButtonTest()[pri:2, instance:com.mydemo.SauceTestUpdated@1169afe1]">checkAddToCartButtonTest</td> 
+  <td>TestNG-tests-2@1475166221</td>   <td></td> </tr>
+<tr bgcolor="7993ad">  <td>21/06/09 15:32:37</td>   <td>21904</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SauceTestUpdated.checkInventoryItemTest()[pri:1, instance:com.mydemo.SauceTestUpdated@2eea88a1]">checkInventoryItemTest</td> 
+  <td>TestNG-tests-1@299524541</td>   <td></td> </tr>
+<tr bgcolor="996ed7">  <td>21/06/09 15:32:39</td>   <td>23365</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestUpdated.tearDown(org.testng.ITestResult, org.testng.ITestContext)[pri:0, instance:com.mydemo.SauceTestUpdated@1169afe1]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@1475166221</td>   <td></td> </tr>
+<tr bgcolor="996ed7">  <td>21/06/09 15:32:43</td>   <td>27068</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestUpdated.tearDown(org.testng.ITestResult, org.testng.ITestContext)[pri:0, instance:com.mydemo.SauceTestUpdated@2eea88a1]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@299524541</td>   <td></td> </tr>
+<tr bgcolor="996ed7">  <td>21/06/09 15:32:44</td>   <td>28370</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestUpdated.setUp(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.reflect.Method, org.testng.ITestContext)[pri:0, instance:com.mydemo.SauceTestUpdated@2eea88a1]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@299524541</td>   <td></td> </tr>
+<tr bgcolor="7993ad">  <td>21/06/09 15:33:02</td>   <td>46574</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SauceTestUpdated.checkAddToCartButtonTest()[pri:2, instance:com.mydemo.SauceTestUpdated@2eea88a1]">checkAddToCartButtonTest</td> 
+  <td>TestNG-tests-1@299524541</td>   <td></td> </tr>
+<tr bgcolor="996ed7">  <td>21/06/09 15:33:07</td>   <td>51309</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestUpdated.tearDown(org.testng.ITestResult, org.testng.ITestContext)[pri:0, instance:com.mydemo.SauceTestUpdated@2eea88a1]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@299524541</td>   <td></td> </tr>
+<tr bgcolor="996ed7">  <td>21/06/09 15:33:08</td>   <td>52232</td> <td title="&lt;&lt;BaseTestUpdated.fileemail()[pri:0, instance:com.mydemo.SauceTestUpdated@1169afe1]">&lt;&lt;fileemail</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1578587450</td>   <td></td> </tr>
 </table>
